# FaceRecognition_cpp

./: CMakeLists.txt  README.md
models/: FaceDet.onnx  FaceLive.onnx  FaceRec.onnx  blazeface_simmir.onnx
src/: Face.h  FaceDet.cpp  FaceLive.cpp  FaceRec.cpp  main.cpp
